--- a/package.json
+++ b/package.json
@@ -6,6 +6,10 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "peerDependencies": {
+    "eslint": ">= 8.6.0",
+    "prettier": "^2.5.1"
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/pirika-inc/eslint-config-pirika.git"
