--- a/package.json
+++ b/package.json
@@ -10,6 +10,11 @@
     "eslint": ">= 8.6.0",
     "prettier": "^2.5.1"
   },
+  "files": [
+    "index.js",
+    "react.js",
+    "prettier-config.js"
+  ],
   "repository": {
     "type": "git",
     "url": "git+https://github.com/pirika-inc/eslint-config-pirika.git"
