--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "eslint-config-pirika-install-deps-react": "bin/install-deps-react"
   },
   "peerDependencies": {
-    "eslint": "^8.6.0",
+    "eslint": ">= 6",
     "prettier": "^2.5.1",
     "@typescript-eslint/eslint-plugin": "^5.9.1",
     "@typescript-eslint/parser": "^5.9.1",
