--- a/package.json
+++ b/package.json
@@ -9,10 +9,10 @@
   },
   "peerDependencies": {
     "eslint": ">= 6",
-    "prettier": "^2.5.1",
-    "@typescript-eslint/eslint-plugin": "^5.9.1",
-    "@typescript-eslint/parser": "^5.9.1",
-    "eslint-config-prettier": "^8.3.0",
+    "prettier": ">= 2.5.1",
+    "@typescript-eslint/eslint-plugin": ">= 6",
+    "@typescript-eslint/parser": ">= 6",
+    "eslint-config-prettier": ">= 8.3.0",
     "eslint-plugin-prefer-arrow": "^1.2.3"
   },
   "files": [
